src/objects/Apttus_Config2__ProductAttributeRuleView__c.object
<CustomObject>
    <description>Represents a denormalized (materialized) view of product and attribute rule</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines what records will be deleted after successfully creating new records.</description>
        <inlineHelpText>Determines what records will be deleted after successfully creating new records.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product attribute rule</description>
        <inlineHelpText>ID of the associated product attribute rule</inlineHelpText>
        <label>Product Attribute Rule</label>
        <referenceTo>Apttus_Config2__ProductAttributeRule__c</referenceTo>
        <relationshipLabel>Attribute Rule Views</relationshipLabel>
        <relationshipName>AttributeRuleViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Attribute Rule Views</relationshipLabel>
        <relationshipName>AttributeRuleViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <label>Migration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Product Attribute Rule View</label>
    <nameField>
        <displayFormat>PARV-{00000}</displayFormat>
        <label>Product Attribute Rule View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Rule Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>